## pyproject.toml

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "titan"
version = "0.1.0"
description = "TITAN IOC microservice (Lite Edition) — FastAPI + SQLModel"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Tanner Lyon" }]
requires-python = ">=3.11"
dependencies = [
"fastapi>=0.115.0",
"uvicorn[standard]>=0.30.0",
"sqlmodel>=0.0.22",
"pydantic>=2.6",
"PyJWT>=2.8",
"passlib[bcrypt]>=1.7.4",
"python-multipart>=0.0.9",
]


[project.optional-dependencies]
dev = [
"pytest>=8.0",
"httpx>=0.27",
"anyio>=4.0",
"ruff>=0.6.0",
"mypy>=1.8",
]


[tool.ruff]
line-length = 100


[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
